--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user_profile
 spring.datasource.username=root
-
-spring.datasource.password=cat20121
-
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
