--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -42,6 +42,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+		<!-- NIst Passpole -->
+		<dependency>
+			<groupId>com.codahale</groupId>
+			<artifactId>passpol</artifactId>
+			<version>0.6.2</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
