--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,7 @@ buildNumber.properties
 
 # About IntelliJ
 *.iml
-/.idea/
+.idea/
 /out/
  
 # BlueJ files
@@ -151,7 +151,6 @@ cmake-build-debug/
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
-# JIRA plugin
 atlassian-ide-plugin.xml
  
 # Crashlytics plugin (for Android Studio and IntelliJ)
