--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user_profile
-spring.datasource.username=bob
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user_profile?verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.username=sonia
 spring.datasource.password=cat
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
