--- a/webapp/src/main/resources/application-default.properties
+++ b/webapp/src/main/resources/application-default.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user_profile
+spring.datasource.url=jdbc:mysql://localhost:3306/user_profile
 spring.datasource.username=zhe
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -7,3 +7,9 @@ spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 management.security.enabled=false
+
+localPath=/home/zhe/Desktop/temp/
+aws.access.key.id=AKIAJ2MKPTENSQL4B7ZQ
+aws.access.key.secret=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
+aws.region=us-east-1
+aws.s3.audio.bucket=csye6225-spring2019-liuzhe3.me.csye6225.com
