--- a/webapp/src/main/resources/application-default.properties
+++ b/webapp/src/main/resources/application-default.properties
@@ -9,7 +9,6 @@ spring.datasource.initial-size=5
 management.security.enabled=false
 
 localPath=/home/zhe/Desktop/temp/
-aws.access.key.id=AKIAJ2MKPTENSQL4B7ZQ
-aws.access.key.secret=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
 aws.region=us-east-1
 aws.s3.audio.bucket=csye6225-spring2019-liuzhe3.me.csye6225.com
+server.port=8080
