--- a/webapp/src/main/resources/application-dev.properties
+++ b/webapp/src/main/resources/application-dev.properties
@@ -8,8 +8,7 @@ spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 management.security.enabled=false
 
-aws.access.key.id=AKIAJ2MKPTENSQL4B7ZQ
-aws.access.key.secret=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
 aws.region=us-east-1
 aws.s3.audio.bucket=csye6225-spring2019-liuzhe3.me.csye6225.com
 localPath=/home/zhe/Desktop/temp/
+server.port=80
