--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - checkout
       - run:
           name: Install AWS CLI
+          command: |
             pip install awscli
       - run:
           name: Run Test Case & Build Artifact
