--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run:
           name: Install AWS CLI
           command: |
-          sudo yum -y install python
+          sudo apt-get install python3
           curl -O https://bootstrap.pypa.io/get-pip.py
           python get-pip.py
           pip –version
