--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
             sudo curl -O https://bootstrap.pypa.io/get-pip.py
             sudo python get-pip.py
             sudo pip install awscli
-            sudo pip install awscli –upgrade
+            sudo pip install awscli -upgrade
             aws --version
       - run:
           name: Run Test Case & Build Artifact
