update-cloud-watch

--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,8 @@ os: linux
 files:
   - source: ./webapp/target/springbootdemo-0.0.1-SNAPSHOT.jar
     destination: /home/centos
+  - source: ./cloudwatch-config.json
+    destination: /home/centos
 
 hooks:
   BeforeInstall:
