--- a/webapp/src/main/resources/application-default.properties
+++ b/webapp/src/main/resources/application-default.properties
@@ -12,3 +12,4 @@ localPath=/home/zhe/Desktop/temp/
 aws.region=us-east-1
 aws.s3.audio.bucket=csye6225-spring2019-liuzhe3.me.csye6225.com
 server.port=8080
+logging.file=~/csye6225.log
