--- a/cloudwatch-config.json
+++ b/cloudwatch-config.json
@@ -1,14 +1,14 @@
 {
     "agent": {
         "metrics_collection_interval": 10,
-        "logfile": "/var/logs/amazon-cloudwatch-agent.log"
+        "logfile": "/home/centos/csye6225.log"
     },
     "logs": {
         "logs_collected": {
             "files": {
                 "collect_list": [
                     {
-                        "file_path": "/opt/tomcat/logs/csye6225.log",
+                        "file_path": "/home/centos/csye6225.log",
                         "log_group_name": "csye6225_spring2019",
                         "log_stream_name": "webapp"
                     }
