--- a/cloudwatch-config.json
+++ b/cloudwatch-config.json
@@ -8,7 +8,7 @@
             "files": {
                 "collect_list": [
                     {
-                        "file_path": "/opt/tomcat/logs/csye6225.log",
+                        "file_path": "/home/centos/csye6225.log",
                         "log_group_name": "csye6225_spring2019",
                         "log_stream_name": "webapp"
                     }
