--- a/webapp/src/main/resources/application-dev.properties
+++ b/webapp/src/main/resources/application-dev.properties
@@ -13,3 +13,4 @@ aws.s3.audio.bucket=csye6225-spring2019-liuzhe3.me.csye6225.com
 localPath=/home/zhe/Desktop/temp/
 server.port=80
 logging.file=~/csye6225.log
+aws.sns.topic.ARN=arn:aws:sns:us-east-1:063252730292:SNSReset
