--- a/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
+++ b/infrastructure/aws/cloudformation/csye6225-cf-auto-scaling-application.json
@@ -939,7 +939,7 @@
                 "LoadBalancerArn": {
                     "Ref": "ApplicationLoadBalancer"
                 },
-                "Port": "80",
+                "Port": "443",
                 "Protocol": "HTTPS",
                 "Certificates": [
                     {
@@ -1151,8 +1151,8 @@
                     "height": 60
                 },
                 "position": {
-                    "x": 480,
-                    "y": 90
+                    "x": 1050,
+                    "y": 100
                 },
                 "z": 1,
                 "embeds": []
@@ -1163,8 +1163,8 @@
                     "height": 60
                 },
                 "position": {
-                    "x": 480,
-                    "y": 210
+                    "x": 1040,
+                    "y": 230
                 },
                 "z": 1,
                 "embeds": []
@@ -1175,8 +1175,8 @@
                     "height": 60
                 },
                 "position": {
-                    "x": 480,
-                    "y": 330
+                    "x": 1060,
+                    "y": 530
                 },
                 "z": 1,
                 "embeds": []
@@ -1187,8 +1187,8 @@
                     "height": 60
                 },
                 "position": {
-                    "x": 300,
-                    "y": 450
+                    "x": 930,
+                    "y": 440
                 },
                 "z": 1,
                 "embeds": [],
@@ -1202,8 +1202,8 @@
                     "height": 60
                 },
                 "position": {
-                    "x": 420,
-                    "y": 450
+                    "x": 1150,
+                    "y": 380
                 },
                 "z": 1,
                 "embeds": [],
@@ -1370,6 +1370,9 @@
                     "78901633-db6e-4296-99ee-a276cfc26ee9"
                 ],
                 "iscontainedinside": [
+                    "2e03b58e-cff5-4bd4-a32b-b88cc9652b70",
+                    "2e03b58e-cff5-4bd4-a32b-b88cc9652b70",
+                    "2e03b58e-cff5-4bd4-a32b-b88cc9652b70",
                     "2e03b58e-cff5-4bd4-a32b-b88cc9652b70",
                     "2e03b58e-cff5-4bd4-a32b-b88cc9652b70",
                     "2e03b58e-cff5-4bd4-a32b-b88cc9652b70",
